--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,12 @@
 plugins {
     id 'java'
     id 'io.spring.dependency-management' version '1.1.0'
-    id 'org.springframework.boot' version '2.7.8'
+    id 'org.springframework.boot' version '3.0.2'
 }
 
 group 'br.com.example'
 version '1.0-SNAPSHOT'
+sourceCompatibility = 17
 
 repositories {
     mavenCentral()
